Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -78,12 +78,27 @@
                     <div class="card-tag">Task Management & Productivity Dashboard</div>
                 </div>
             </article>
-                <article class="project-card" onclick="window.open('https://merveayliz.github.io/merve-card/', '_blank')">
+              <article class="project-card" onclick="window.open('https://merveayliz.github.io/oyun/', '_blank')">
                 <div class="card-content">
                     <span>07</span>
+                    <h3>Mini Oyun</h3>
+                    <p>"2 tane kısa oyun" </p>
+                    <div class="card-tag">UX / Interactive</div>
+                </div>
+            </article>  <article class="project-card" onclick="window.open('https://merveayliz.github.io/to-do-list/', '_blank')">
+                <div class="card-content">
+                    <span>08</span>
+                    <h3>To Do List </h3>
+                    <p>"Planlayıcı " </p>
+                    <div class="card-tag">UX / Interactive</div>
+                </div>
+            </article>
+                <article class="project-card" onclick="window.open('https://merveayliz.github.io/merve-card/', '_blank')">
+                <div class="card-content">
+                    <span>09</span>
                     <h3>Merve-Card</h3>
                     <p>Marka tanıtma kartı</p>
-                    <div class="card-tag">UI <div>
+                    <div class="card-tag">UI / UX <div>
                 </div>
             </article>
             
@@ -140,4 +155,5 @@
 
 </body>
 </html>
+
 
