Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <span>02</span>
                     <h3>Gastronomi Arşivi</h3>
                     <p>İçerik odaklı, kullanıcı dostu tarif platformu.</p>
-                    <div class="card-tag">UI / Content</div>
+                    <div class="card-tag">Digital Cookbook / Grid Layout</div>
                 </div>
             </article>
             
@@ -49,7 +49,7 @@
                     <span>03</span>
                     <h3>Pati Barınak</h3>
                     <p>Sosyal sorumluluk odaklı kurumsal kimlik çalışması.</p>
-                    <div class="card-tag">Corporate / Social</div>
+                    <div class="card-tag"> Non-Profit UI / Social Impact</div>
                 </div>
             </article> 
 
@@ -58,7 +58,7 @@
                     <span>04</span>
                     <h3>Skaikru Social</h3>
                     <p>The 100 hayranları için interaktif sosyalleşme platformu.</p>
-                    <div class="card-tag">Social / Valentines Special</div>
+                    <div class="card-tag">Non-Profit UI / Social Impact</div>
                 </div>
             </article>
 
@@ -67,7 +67,7 @@
                     <span>05</span>
                     <h3>Grounder Lands</h3>
                     <p>Dizideki ikonik lokasyonların teknik ve hikayesel rehberi.</p>
-                    <div class="card-tag">Guide / Web Design</div>
+                    <div class="card-tag">Immersive Storytelling / Web Design</div>
                 </div>
             </article>
                 <article class="project-card" onclick="window.open('https://merveayliz.github.io/Dashboard/', '_blank')">
@@ -75,7 +75,7 @@
                     <span>06</span>
                     <h3>Dashboard</h3>
                     <p>"İş Yönetimi ve Verimlilik Paneli" </p>
-                    <div class="card-tag">Task Management & Productivity Dashboard</div>
+                    <div class="card-tag">SaaS Dashboard / Data Visualization</div>
                 </div>
             </article>
               <article class="project-card" onclick="window.open('https://merveayliz.github.io/oyun/', '_blank')">
@@ -83,14 +83,14 @@
                     <span>07</span>
                     <h3>Mini Oyun</h3>
                     <p>"2 tane kısa oyun" </p>
-                    <div class="card-tag">UX / Interactive</div>
+                    <div class="card-tag">Game Design / Logic & Interaction</div>
                 </div>
             </article>  <article class="project-card" onclick="window.open('https://merveayliz.github.io/to-do-list/', '_blank')">
                 <div class="card-content">
                     <span>08</span>
                     <h3>To Do List </h3>
                     <p>"Planlayıcı " </p>
-                    <div class="card-tag">UX / Interactive</div>
+                    <div class="card-tag">Productivity Tool / App Interface</div>
                 </div>
             </article>
                 <article class="project-card" onclick="window.open('https://merveayliz.github.io/merve-card/', '_blank')">
@@ -98,10 +98,25 @@
                     <span>09</span>
                     <h3>Merve-Card</h3>
                     <p>Marka tanıtma kartı</p>
-                    <div class="card-tag">UI / UX <div>
+                    <div class="card-tag">Personal Branding / Minimalist UI<div>
                 </div>
             </article>
-            
+                          </article>  <article class="project-card" onclick="window.open('https://merveayliz.github.io/mektup-/', '_blank')">
+                <div class="card-content">
+                    <span>10</span>
+                    <h3>14 Şubat Hediyesi </h3>
+                    <p>"mektup " </p>
+                    <div class="card-tag">Micro-interaction / Digital Gift</div>
+                </div>
+            </article>
+             </article>  <article class="project-card" onclick="window.open('https://merveayliz.github.io/evrenden-mesaj/', '_blank')">
+                <div class="card-content">
+                    <span>11</span>
+                    <h3>Şans kartları</h3>
+                    <p>"Rastgele algoritmalara dayalı, mistik ve interaktif bir motivasyon deneyimi." </p>
+                    <div class="card-tag">Experience Design / JS Randomizer</div>
+                </div>
+            </article>
         </div> 
     </section>
 
@@ -155,5 +170,6 @@
 
 </body>
 </html>
+
 
 
